...

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <com.google.android.material.navigation.NavigationView
                        android:id="@+id/nav_view"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="?android:attr/windowBackground"
                        android:paddingBottom="48dip"
                        android:scrollbars="vertical"
...
