...
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.hippo.ehviewer.widget.MyEasyRecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="5" />

                <com.sxj.paginationlib.PaginationIndicator
                    android:id="@+id/indicator"
...
