...
    <string name="sign_in_failed_plain">Perhaps it is a mistake due to website update or something wrong happened. You may try sign in via WebView or enter cookie or skip signing in under sign in button. But you may be a "Sad Panda" after skipping signing in. Try "Sign in via cookies" first if you had signed in on 0.6.x version.</string>
    <string name="press_twice_exit">Press twice to exit</string>
    <string name="content_layout_restore_tip">Tap to retry</string>
    <string name="write_rationale">EhViewer will request WRITE_EXTERNAL_STORAGE permission for downloading gallery. Do you want to grant the permission?</string>
    <string name="you_rejected_me">It hurts</string>
    <string name="analytics_explain">Would you mind if the developer collected your device information and your usage? It will help the developer a lot.&lt;br&gt;&lt;br&gt;Data analysis service is provided by Google Analytics for Firebase. Its privacy policy can be found at &lt;a href=&quot;https://www.google.com/policies/privacy/&quot;&gt;https://www.google.com/policies/privacy/&lt;/a&gt;.&lt;br&
    <string name="get_it">Got it</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>

    <string name="help_route">Settings->About->Help</string>

    <!-- Select scene -->
...
